--- a/app/src/main/res/layout/dialog_editjersey.xml
+++ b/app/src/main/res/layout/dialog_editjersey.xml
@@ -12,6 +12,7 @@
         android:text="@string/jersey_name_dialog" />
     <EditText
         android:id="@+id/jersey_name_dialog"
+        android:hint="@string/jersey_name_hint"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textCapSentences" />
@@ -21,6 +22,7 @@
         android:text="@string/jersey_number_dialog" />
     <EditText
         android:id="@+id/jersey_number_dialog"
+        android:hint="@string/jersey_number_hint"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="number" />
