--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,6 +2,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="io.ruszkipista.designyourjersey.MainActivity">
+
+    <item
+        android:id="@+id/action_options_reset"
+        android:orderInCategory="100"
+        android:title="@string/action_reset"
+        app:showAsAction="ifRoom"
+        />
+
     <item
         android:id="@+id/action_options_settings"
         android:orderInCategory="100"
